--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.9"
 services:
   sideburn-web:
+    restart: always
     container_name: sideburn-web
     build: ./sideburn-web/
     ports:
