--- a/sideburn-web/package.json
+++ b/sideburn-web/package.json
@@ -24,6 +24,7 @@
     "@auth0/auth0-angular": "^1.7.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.0",
+    "ng-bootstrap": "^1.6.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
