--- a/sideburn-api/package.json
+++ b/sideburn-api/package.json
@@ -2,13 +2,15 @@
   "name": "sideburn-api",
   "version": "1.0.0",
   "description": "API for Sideburn Whiskylaug",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "André Biseth",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.17.1",
     "mongodb": "^4.1.3"
   }
 }
