--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,20 @@ services:
     build: ./sideburn-web/
     ports:
       - "8585:80"
+  sideburn-db:
+    # image: couchdb
+    build: ./sideburn-db/
+    container_name: sideburn-db
+    restart: always
+    environment:
+      - 'COUCHDB_USER=${COUCHDB_USER}'
+      - 'COUCHDB_PASSWORD=${COUCHDB_PASSWORD}'
+    volumes:
+      - "./sideburn-db/couchdb/data:/opt/couchdb/data"
   sideburn-api:
     restart: always
     container_name: sideburn-api
     build: ./sideburn-api/
+    links: ['sideburn-db']
     ports:
       - "8686:4200"
-  sideburn-db:
-    image: couchdb
-    restart: always
-    volumes:
-      - "./sideburn-db/couchdb/data:/opt/couchdb/data"
