--- a/sideburn-api/package.json
+++ b/sideburn-api/package.json
@@ -10,7 +10,8 @@
   "author": "André Biseth",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongodb": "^4.1.3"
+    "node-couchdb": "^1.3.0"
   }
 }
