--- a/sideburn-db/Dockerfile
+++ b/sideburn-db/Dockerfile
@@ -1,6 +1,3 @@
 FROM couchdb:latest
-COPY ./mycustom.ini .
-COPY ./local.ini .
-
-RUN cp mycustom.ini /opt/couchdb/etc/local.d/
-RUN cp local.ini /opt/couchdb/etc/
+COPY ./mycustom.ini /opt/couchdb/etc/local.d/
+COPY ./local.ini /opt/couchdb/etc/
