--- a/sideburn-api/package.json
+++ b/sideburn-api/package.json
@@ -12,6 +12,6 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "node-couchdb": "^1.3.0"
+    "nano": "^9.0.5"
   }
 }
