--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,25 +3,25 @@ services:
   web:
     restart: always
     container_name: web
-    build: ./sideburn-web/
+    build: ./web/
     ports:
       - "8585:80"
   db:
     # image: couchdb
-    build: ./sideburn-db/
+    build: ./db/
     container_name: db
     restart: always
     environment:
       - 'COUCHDB_USER=${COUCHDB_USER}'
       - 'COUCHDB_PASSWORD=${COUCHDB_PASSWORD}'
     volumes:
-      - "./sideburn-db/couchdb/data:/opt/couchdb/data"
+      - "./db/couchdb/data:/opt/couchdb/data"
     ports:
       - "5984:5984"
   api:
     restart: always
     container_name: api
-    build: ./sideburn-api/
+    build: ./api/
     links: ['db']
     environment:
       - 'COUCHDB_USER=${COUCHDB_USER}'
