--- a/api/package.json
+++ b/api/package.json
@@ -2,9 +2,10 @@
   "name": "sideburn-api",
   "version": "1.0.0",
   "description": "API for Sideburn Whiskylaug",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc --build",
     "start": "ts-node ./src/index.ts",
     "dev": "ts-node-dev --respawn ./src/index.ts"
   },
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/nano": "^7.0.0",
     "@types/node": "^16.11.1",
     "ts-node": "^10.3.0",
     "ts-node-dev": "^1.1.8",
