Work in progress

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -10,6 +10,7 @@ FROM node:lts-alpine
 COPY --from=build-step /app/dist/ /usr/src/app/
 
 WORKDIR /usr/src/app
+RUN npm install
 
 EXPOSE 8080
 CMD [ "node", "index.js" ]
