--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
   "author": "André Biseth",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "nano": "^9.0.5"
