--- a/db/mycustom.ini
+++ b/db/mycustom.ini
@@ -2,8 +2,11 @@
 single_node=true
 
 [httpd]
-enable_cors = true
+enable_cors=true
 
 [chttpd]
 port=5984
 bind_address=0.0.0.0
+
+[couch_httpd_auth]
+allow_persistent_cookies=true
