--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "serve": "ng serve --configuration development",
     "test": "ng test"
   },
   "private": true,
