--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "lorem-ipsum": "^2.0.4",
     "nano": "^9.0.5"
   },
