--- a/api/package.json
+++ b/api/package.json
@@ -17,7 +17,10 @@
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
+    "express-oauth2-jwt-bearer": "^1.0.1",
     "helmet": "^4.6.0",
+    "jwks-rsa": "^2.0.5",
     "lorem-ipsum": "^2.0.4",
     "nano": "^9.0.5"
   },
