--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "nano": "^9.0.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/nano": "^7.0.0",
     "@types/node": "^16.11.4",
