--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "@auth0/auth0-angular": "^1.7.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.0",
+    "marked": "^3.0.8",
     "rxjs": "~6.5.3",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
@@ -34,6 +35,7 @@
     "@angular/cli": "~12.2.11",
     "@angular/compiler-cli": "~12.2.11",
     "@types/jasmine": "~3.10.1",
+    "@types/marked": "^3.0.2",
     "@types/node": "^14.14.31",
     "jasmine-core": "~3.10.1",
     "karma": "~6.3.5",
