--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "@auth0/auth0-angular": "^1.7.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.0",
+    "jwt-decode": "^3.1.2",
     "marked": "^3.0.8",
     "rxjs": "~6.5.3",
     "tslib": "^2.3.1",
