--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,9 @@ services:
     restart: always
     container_name: web
     build: ./web/
-    # volumes:
-    #   - web_data:/usr/share/nginx/html:ro
-    #   - nginx_config:/etc/nginx:ro
     ports:
       - "8585:80"
   db:
-    # image: couchdb
     build: ./db/
     container_name: db
     restart: always
@@ -21,7 +17,7 @@ services:
     volumes:
       - "./db/couchdb/data:/opt/couchdb/data"
     ports:
-      - "5984:5984"
+      - "${COUCHDB_PORT}:${COUCHDB_PORT}"
   api:
     restart: always
     container_name: api
@@ -35,13 +31,3 @@ services:
       - 'COUCHDB_DATABASE=${COUCHDB_DATABASE}'
     ports:
       - "8686:8080"
-
-# volumes:
-#   nginx_config:
-#   web_data:
-    # driver: local
-    # driver_opts:
-    #   type: 'none'
-    #   o: 'bind'
-    #   device: './.volumes/web/html'
-
