--- a/api/package.json
+++ b/api/package.json
@@ -19,9 +19,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-jwt": "^6.1.0",
+    "express-jwt-authz": "^2.4.1",
     "express-oauth2-jwt-bearer": "^1.0.1",
     "helmet": "^4.6.0",
     "jwks-rsa": "^2.0.5",
+    "jwt-decode": "^3.1.2",
     "lorem-ipsum": "^2.0.4",
     "nano": "^9.0.5"
   },
