--- a/web/package.json
+++ b/web/package.json
@@ -11,30 +11,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.11",
-    "@angular/cdk": "^12.2.11",
-    "@angular/common": "~12.2.11",
-    "@angular/compiler": "~12.2.11",
-    "@angular/core": "~12.2.11",
-    "@angular/forms": "~12.2.11",
-    "@angular/localize": "~12.2.11",
-    "@angular/material": "~12.2.11",
-    "@angular/platform-browser": "~12.2.11",
-    "@angular/platform-browser-dynamic": "~12.2.11",
-    "@angular/router": "~12.2.11",
-    "@auth0/auth0-angular": "^1.7.0",
-    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "bootstrap": "^4.5.0",
-    "jwt-decode": "^3.1.2",
-    "marked": "^3.0.8",
-    "rxjs": "~6.5.3",
+    "@angular/animations": "~12.2.13",
+    "@angular/cdk": "^12.2.13",
+    "@angular/common": "~12.2.13",
+    "@angular/compiler": "~12.2.13",
+    "@angular/core": "~12.2.13",
+    "@angular/forms": "~12.2.13",
+    "@angular/localize": "~12.2.13",
+    "@angular/material": "~12.2.13",
+    "@angular/platform-browser": "~12.2.13",
+    "@angular/platform-browser-dynamic": "~12.2.13",
+    "@angular/router": "~12.2.13",
+    "@auth0/auth0-angular": "~1.8.0",
+    "@ng-bootstrap/ng-bootstrap": "~10.0.0",
+    "bootstrap": "~4.5.0",
+    "dompurify": "^2.3.3",
+    "jwt-decode": "~3.1.2",
+    "marked": "^4.0.3",
+    "rxjs": "~6.5.5",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.11",
-    "@angular/cli": "~12.2.11",
-    "@angular/compiler-cli": "~12.2.11",
+    "@angular-devkit/build-angular": "~12.2.13",
+    "@angular/cli": "~12.2.13",
+    "@angular/compiler-cli": "~12.2.13",
+    "@types/dompurify": "^2.3.1",
     "@types/jasmine": "~3.10.1",
     "@types/marked": "^3.0.2",
     "@types/node": "^14.14.31",
